--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 /*home.html*/
 /*------------------------------------*/
 
+
 .header{
-    height: 100vh;
     width: 100%;
     background-color: white;
     background-size: cover;
     background-position: center;
+
    }
    
    nav{
@@ -34,15 +35,23 @@
    
    nav ul li a{
     color: black;
-    text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Ubuntu', sans-serif;
+    border-radius: 4px;
+    padding: 5px 10px;
+    text-decoration: none;
    }
-   
+
+   nav ul li a.active,
    nav ul li a:hover{
-    color:red;
+    background:slateblue;
+    color: white;
     transition: .5s;
-   }
+    text-decoration: none;
+
+
+}
+
    
    
 /*------------------------------------*/
