--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,248 @@
-/*home.html*/
-/*------------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dongle:wght@300&family=Genos:ital,wght@1,100&family=Nova+Square&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 
-.header{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+.max-width{
+    max-width: 1700px;
+    padding: 0 60px;
+    margin: auto;
+}
+
+
+
+/*-------------------------------- Navigation Style -------------------------------- */
+
+.navbar{
+    position: fixed;
     width: 100%;
-    background-color: white;
-    background-size: cover;
-    background-position: center;
+    padding: 35px 0;
+    font-family: 'Ubuntu', sans-serif;
+    z-index: 999;
+    transition: all 0.6s ease;
+}
 
-   }
-   
-   nav{
+.navbar .max-width{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 45px;
-    padding-left: 8%;
-    padding-right: 8%;
-   }
-   
-   .main-title{
-    color: black;
-    font-size: 35px;
-    letter-spacing: 6px;
-    cursor: pointer;
-    font-family: 'Ubuntu', sans-serif;
 }
-   
-   nav ul li{
-    list-style-type: none;
+
+.navbar .logo a{ 
+    color: rgb(71, 71, 75);
+    font-size: 35px;
+    font-weight: 600;
+}
+
+
+.navbar .logo a span{ 
+    color: slateblue;
+    transition: all 0.6s ease-in-out;
+}
+
+.navbar .menu li{
+    list-style: none;
     display: inline-block;
-    padding: 15px  25px;
-   }
-   
-   nav ul li a{
+}
+
+.navbar .menu li a{ 
+    color: slateblue;
+    display: block;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 26px;
+    transition: color 0.5s ease;
+}
+
+.navbar .menu li a:hover{ 
+    color: black;
+}
+
+
+
+/*-------------------------------- Menu Button -------------------------------- */
+
+.menu-btn{
     color: black;
     font-size: 25px;
+    cursor: pointer;
+    display: none;
+}
+
+.menu-btn:hover{
+    color: slateblue;
+    transition: all 0.4s ease;
+}
+
+.navbar.sticky .menu-btn{
+    color: black;
+}
+
+.navbar.sticky .menu-btn:hover{
+    color: slateblue;
+    transition: all 0.5s ease;
+}
+
+x
+/*-------------------------------- All "sections" and font styles -------------------------------- */
+
+.about, footer{
+    font-family: 'Poppins', sans-serif;
+}
+
+section{
+    padding: 100px 0;
+}
+
+section .title{
     font-family: 'Ubuntu', sans-serif;
-    border-radius: 4px;
-    padding: 5px 10px;
-    text-decoration: none;
-   }
+    font-size: 50px;
+    font-weight: 500;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
+    position: relative;
+    text-align: center;
+}
+  
 
-   nav ul li a.active,
-   nav ul li a:hover{
-    background:slateblue;
+section .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: black;
+    transform: translateX(-50%);
+}
+
+section .title::after{
+    position: absolute;
+    bottom: -14px;
+    left: 50%;
+    font-size: 20px;
+    color: rgb(155, 4, 34);
+    padding: 5px;
+    background: rgb(255, 255, 255);
+    transform: translateX(-50%)
+}
+
+/*-------------------------------- Home Section -------------------------------- */
+
+.home{
+    display: flex;
+    height: 100vh;
+    color: black;
+    min-height: 500px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.home .max-width{
+    margin: auto 0 auto 40px;
+}
+
+.home .home-content .text-1{
+    font-size: 27px;
+}
+
+.home .home-content .text-2{
+    color: black;
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+
+
+
+.home .home-content a{
+    display: inline-block;
+    background: slateblue;
     color: white;
-    transition: .5s;
-    text-decoration: none;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 7px;
+    border: 2px solid black;
+    transition: all 0.5s ease;
+}
+
+.home .home-content a:hover{
+    color: slateblue;
+    background: white;
+}
 
 
+/*-------------------------------- About Section -------------------------------- */
+
+
+.about .about-content, .skill .skill-content, .contact .contact-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about .about-content .left{
+    width: 50%;
+}
+
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.about .about-content .right{
+    width: 100%;
+}
+
+.about .about-content .right .text{
+    font-size: 32px;
+    font-weight: 500;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.about .about-content .right .text span{
+    color: slateblue;
+}
+
+.about .about-content .right p{
+    color: rgb(59, 59, 59);
+    font-weight: 450;
+    font-size: 19.8px;
+    text-align: justify;
+    padding-bottom: 20px;
+}
+
+
+.about .about-content .right i:hover{
+    color: black;
+    transition: all 0.5s ease;
+}
+
+
+.about .about-content .column{
+    width: 50%;
+}
+
+
+/*-------------------------------- Footer Section -------------------------------- */
+footer{
+    background: rgb(24, 112, 228);
+    padding: 21px 35px;
+    color: white;
+    font-size: 10px;
 }
 
    
-   
-/*------------------------------------*/
-
-
-/*FOOTER*/
-/*------------------------------------*/
-
-
-footer{
-    position: relative;
-    width: 100%;
-    height: 300px;
-    background: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   }
-   
-   
-   footer p{
-    color: black;
-    font-size: 15px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: center;
-    line-height: 28px;
-   }
-
-   .social{
-    display: flex;
-   }
-   
-   .social a{
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    background: black;
-    color: white;
-    border-radius: 15%;
-    text-decoration: none;
-    margin: 22px 10px;
-   }
-   
-   .social a:hover{
-    transform: scale(1.3);
-    transition: .4s;
-   }
-
-   .end{
-    position: absolute;
-    color:black;
-    bottom: 20px;
-    font-size: 15px;
-    font-family: 'Courier New', Courier, monospace; 
-   }
-   
-
-/*------------------------------------*/
 
 
 /*precautions.html*/ 
