--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,27 @@ html{
 }
 
 
+/*-------------------------------- Scrollbar Style -------------------------------- */
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track{
+    border-radius: 10px;
+    box-shadow: inset 0 0 11px rgb(64, 115, 255);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(30, 44, 238);
+    border-radius: 8px;
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(101, 109, 212);
+}
+
 
 /*-------------------------------- Navigation Style -------------------------------- */
 
@@ -302,7 +323,7 @@ footer{
 }
 
 .precautions .column .box-container .title{
-    padding:25px;
+    padding: 35px;
     text-align: center;
     font-size: 35px;
     background:var(--blue);
