--- a/css/style.css
+++ b/css/style.css
@@ -317,19 +317,19 @@ footer{
 .precautions .column .box-container{
     margin:1.5rem;
     flex:1 1 50rem;
-    border:.1rem solid rgba(0,0,0,.1);
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border:.2rem solid black;
+    box-shadow: 0 .5rem 2rem greenyellow;
     border-radius: .5rem;
 }
 
 .precautions .column .box-container .title{
-    padding: 35px;
+    padding:25px;
     text-align: center;
     font-size: 35px;
-    background:var(--blue);
-    color:peachpuff;
+    background:blue;
+    color:white;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+    height: 120px;
 }
 
 .precautions .column .box-container:last-child .title{
@@ -347,15 +347,19 @@ footer{
 .precautions .column .box-container .box img{
     width:15rem;
     padding:30px;
+    object-fit: cover;
 }
 
 .precautions .column .box-container .box h3{
     font-size: 30px;
     color: rgb(233, 113, 113);
+    padding-bottom: 20px;
+
 }
 
 .precautions .column .box-container .box p{
     font-size: 20px;
+    text-align: justify;
 }
 
 
