--- a/css/style.css
+++ b/css/style.css
@@ -159,27 +159,6 @@ section .title{
 }
   
 
-section .title::before{
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 180px;
-    height: 3px;
-    background: black;
-    transform: translateX(-50%);
-}
-
-section .title::after{
-    position: absolute;
-    bottom: -14px;
-    left: 50%;
-    font-size: 20px;
-    color: red;
-    padding: 5px;
-    background: rgb(255, 255, 255);
-    transform: translateX(-50%)
-}
 
 /*-------------------------------- Home Section -------------------------------- */
 
@@ -245,7 +224,6 @@ section .title::after{
     width: 400px;
     object-fit: cover;
     border-radius: 15px;
-    margin-left: 150px;
 }
 
 .about .about-content .right{
@@ -435,10 +413,6 @@ section .title::after{
     box-shadow: 0 2px 4px red;
 }
 
-/*------------------------------------*/
-
-
-
 
 /*-------------------------------- Footer Section -------------------------------- */
 footer{
@@ -448,20 +422,118 @@ footer{
     font-size: 10px;
 }
 
-   
 
 
+/*-------------------------------- Lottie - Animation -------------------------------- */
 
-
-
-/*Lottie - Animation*/
-/*------------------------------------*/
 .animation-loading{
    position: fixed;
    bottom: 0px;
    right: 0px;
 }
-/*------------------------------------*/
 
 
 
+/*-------------------------------- Responsive Media Query -------------------------------- */
+
+
+@media (max-width: 1400px){
+    .home .max-width{
+        margin-left: 0px;
+    }
+
+    .navbar .logo a{
+        font-size: 32px;
+    }
+
+    .navbar .menu li a{
+        font-size: 17px;        
+    }
+}
+
+@media (max-width: 1150px){
+    .about .about-content .left img{
+        height: 330px;
+        width: 430px;
+    }
+
+    .navbar .logo a{
+        font-size: 28px;
+    }
+
+    .navbar .menu li a{
+        font-size: 16px;        
+    }
+}
+
+@media (max-width: 980px){
+    .max-width{
+        padding: 0 60px;
+    }
+}
+
+@media (max-width: 921px){
+    .menu-btn{
+        display: block;
+        z-index: 999;
+    }
+
+    .menu-btn i.active::before{
+        content: "\f00d";
+    }
+
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: black;
+        text-align: center;
+        padding-top: 100px;
+        transition: all 0.6s ease;
+    }
+
+    .navbar .menu.active{
+        left: 0;
+    }
+
+    .navbar .menu li{
+        display: block;
+    }
+
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+
+    .home .home-content .text-2{
+        color: black;
+        font-size: 60px;
+    }
+    
+
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+
+    .max-width{
+        max-width: 1200px;
+    }
+
+    .about .about-content .column{
+        width: 100%;
+    }
+
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+
+    .about .about-content .right{
+        flex: 100%;
+    }
+}
