--- a/css/style.css
+++ b/css/style.css
@@ -116,14 +116,14 @@ html{
 /*-------------------------------- Menu Button -------------------------------- */
 
 .menu-btn{
-    color: goldenrod;
+    color: whitesmoke;
     font-size: 25px;
     cursor: pointer;
     display: none;
 }
 
 .menu-btn:hover{
-    color: slateblue;
+    color: crimson;
     transition: all 0.4s ease;
 }
 
@@ -132,7 +132,7 @@ html{
 }
 
 .navbar.sticky .menu-btn:hover{
-    color: slateblue;
+    color: crimson;
     transition: all 0.5s ease;
 }
 
@@ -285,9 +285,13 @@ section .title{
     background:url(../images/background_img/background3.jpg) no-repeat center;
 }
 
+.symptoms .title{
+    color: whitesmoke;
+}
+
 .symptoms .title::after{
     content: "Symptoms";
-    color: blue;
+    color: crimson;
 }
 
 .symptoms .slide .card3{
@@ -313,7 +317,7 @@ section .title{
 
 
 .symptoms .slide .card3 .text{
-    color: black;
+    color: whitesmoke;
     font-size: 30px;
     font-weight: 500;
     margin: 10px 0 7px 0;
@@ -325,7 +329,7 @@ section .title{
     width: 340px;
     object-fit: cover;
     border-radius: 8%;
-    border: 6px solid slateblue;
+    border: 6px solid crimson;
 }
 
 .symptoms .slide .card3:hover img{
@@ -344,7 +348,7 @@ section .title{
     margin: 0 10px;
     outline: none !important;
     border-radius: 20%;
-    border: 2px solid black !important
+    border: 2px solid white !important
 }
 
 .owl-dot.active{
@@ -353,7 +357,7 @@ section .title{
 }
 
 .owl-dot.active, .owl-dot:hover{
-    background: slateblue !important;
+    background: grey !important;
     transition: all 0.6s ease;
 }
 
